# ME_THESIS_ROBERT_BURKE

./: .gitignore  README.md  citation.cff
CAD Models/: Alignment_Lid_0mm.SLDPRT  Alignment_Lid_20mm.SLDPRT  Alignment_Lid_40mm.SLDPRT  PapillArray_Mount.SLDPRT  Shaft_Adaptor.SLDPRT
Experimental Data/: EXPERIMENTAL_DATA_20230426.xlsx
UCD_robot_ws/: README.md
UCD_robot_ws/src/gripper/: package.xml
UCD_robot_ws/src/gripper/src/: MX28_node.py  Robotic_Servos.py  grip_force_protocol.py  gripper_node.py  pid_node.py
UCD_robot_ws/src/robot/: package.xml
UCD_robot_ws/src/robot/src/: robot_node.py
UCD_robot_ws/src/ucd_robot/: package.xml
UCD_robot_ws/src/ucd_robot/launch/: const_gf.launch  friction_est.launch  papillarray.launch  reactive_system.launch
UCD_robot_ws/src/ucd_robot/src/: camera_node.py  ucd_robot_node.py
