<?xml version="1.0"?>
<package format="2">
  <name>gripper</name>
  <version>1.0.0</version>
  <description>The gripper package</description>

  <maintainer email="robertljburke@gmail.com">rob</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>dynamixel_sdk</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>

  <export>

  </export>
</package>
